# CIPS

./: .coverage  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  render.yaml  requirements.txt  run.py  setup.py
.github/workflows/: main.yml
backend/: Dockerfile  pyproject.toml  requirements.txt  setup.py
backend/app/: db.py  main.py  models.py
backend/app/api/: endpoints.py
backend/app/core/: config.py  logging_config.py
backend/app/services/: data_collection.py  model_evaluation.py  preprocessing.py
backend/app/utils/: eda.py
backend/notebook/: experiment.ipynb
backend/tests/: test_api.py  test_db.py  test_endpoints_fail.py  test_services.py  test_utils.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: constants.js  index.css
frontend/src/components/: Footer.jsx  PredictionForm.jsx
frontend/src/pages/: Home.jsx
frontend/src/services/: api.js
model/: pipe.pkl
notebook/: experiment.ipynb  model.ipynb
src/: data_collection.py  model_evaluation.py  preprocessing.py
static/: style.css
templates/: index.html
utils/: eda.py
